--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,7 +3,9 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
+:root.page.theme_dark {
+  --accent-color: #ff0070;
+}
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
