--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,19 @@ a {
   font-size: inherit;
   line-height: inherit;
 }
+
+h3,
+h4,
+h5,
+h6,
+p {
+  font-size: 18px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 700;
+}
