--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,327 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-image: url('../images/cover-image-dark.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  font-family: 'IBM Plex mono';
+  width: 100vw;
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+}
+.title-decor {
+  background-color: #FF0070;
+}
+.header {
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  position: relative;
+  gap: 55px;
+  min-height: 668px;
+  padding: 10px;
+}
+.title {
+  color: #DB00FF;
+  font-weight: 700;
+  line-height: 95.7px;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+}
+.header-title {
+  justify-self: start;
+  text-shadow: 4px 4px 0px #FF0070;
+}
+.decorated-zone::before {
+  content: '';
+  width: 25px;
+  height: 25px;
+  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--accent-color);
+  top: 10px;
+  right: 10px;
+  position: absolute;
+}
+.decorated-zone::after {
+  content: '';
+  width: 25px;
+  height: 25px;
+  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--accent-color);
+  bottom: 10px;
+  left: 10px;
+  position: absolute;
+}
+.decor-sign::before {
+content:'REC';
+position: absolute;
+color: var(--accent-color);
+font-size: 18px;
+top: 10px;
+right: 38px;
+}
+.decor-sign::after {
+  content:'';
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 100%;
+  background-color: var(--accent-color);
+  filter: drop-shadow(0px 0px 4px #FF0070);
+  top: 18px;
+  right: 19px;
+}
+.header__theme-menu {
+  width: 70px;
+  height: 104px;
+  justify-self: end;
+  margin-block-start: 66.5px;
+}
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 13px;
+}
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+  width: 70px;
+  height: 23px;
+  text-transform: lowercase;
+  letter-spacing: 1.1px;
+  line-height: 18px;
+  font-size: 18px;
+  color: var(--accent-color);
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.header__theme-menu-button_type_dark {
+  border: solid 1px var(--accent-color);
+}
+.header__theme-menu-button_type_light:hover {
+border: 1px solid rgba(255, 0, 112, 0.40);
+}
+.header__theme-menu-button_type_light:focus-visible {
+  border-top: none;
+  border-right: none;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: none;
+  outline: none;
+}
+.header-text {
+  color: #000028;
+  line-height: 23.4px;
+  font-weight: 700;
+  justify-self: end;
+  max-height: 117px;
+}
+.decor-sign {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+}
+.card-list {
+  display: grid;
+  gap: 50px;
+  padding: 0 10px 0;
+  margin-block-start: 40px;
+}
+.card-list__item {
+  display: grid;
+  gap: 20px;
+}
+.card {
+  display: grid;
+  gap: 10px;
+}
+.section {
+  display: grid;
+  gap: 10px;
+}
+.card-title {
+  color: var(--accent-color);
+}
+.advise {
+  font-weight: 400;
+}
+.section-text {
+  color:  #F1B2CE;
+  line-height: 23.4px;
+}
+.text-link {
+  text-shadow: 2px 1px 0px #FF0070;
+  text-decoration: none;
+}
+.text-link:hover {
+text-decoration: underline;
+text-decoration-thickness: 1px;
+}
+.text-link:focus-visible {
+  border: 1px solid #F1B2CE;
+  outline: none;
+}
+.img-card {
+  display: grid;
+}
+.card-image {
+ width: 100%;
+ height: 100%;
+}
+.footer {
+  margin-block-start: 40px;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 10px;
+  min-height: 667px;
+  height: 100vh;
+}
+.footer-title {
+  text-shadow: 2px 2px 0px #FF0070;
+  margin-block-end: 10px;
+  
+}
+
+/* Для планшета и десктопа */
+@media (  width >= 376px) {
+  .header {
+    padding: 20px;
+  }
+  .header::before {
+    top: 20px;
+    right: 20px;
+  }
+  .header::after {
+    left: 20px;
+    bottom: 20px;
+  }
+  .decor-sign::before {
+    top: 20px;
+    right: 48px;
+   }
+   .decor-sign::after {
+     top: 28px;
+     right: 29px;
+   }
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+  .header-title {
+   margin-inline-start: -20px;
+  }
+  .header-text {
+    width: calc(50vw - 20px);
+  }
+  .card-list {
+    padding: 0 20px 0;
+    display: grid;
+    gap: 80px;
+    margin-block-start: 60px;
+  }
+  .card {
+    display: grid;
+    gap: 20px;
+  }
+  .section-title {
+    height: 23px;
+  }
+  .img-card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+  .img-card-title {
+    grid-column: 1/4;
+  }
+  .sunset-img {
+    grid-column: 1/3;
+    grid-row: 2/2;
+  }
+  .ice-cream-img {
+    grid-row: 2/4;
+    object-fit: cover;
+}
+  .tape-img {
+    grid-row: 3/5;
+    object-fit: cover;
+  }
+  .street-img {
+    grid-column: 2/4;
+  }
+  .footer {
+    padding: 20px;
+    margin-block-start: 60px;
+  }
+  .footer::before {
+    top: 20px;
+    right: 20px;
+  }
+  .footer::after {
+    bottom: 20px;
+    left: 20px;
+  }
+}
+
+/* Для планшета */ 
+@media (768px >= width >= 376px ) {
+  .header {
+    display: grid;
+    gap: 165px;
+  }
+  .header__theme-menu {
+   margin-block-start: 173px;
+  }
+  .focus {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .concentration-title {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+  .five-advices {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+}
+/* Для десктопа */
+@media (width >= 769px) {
+  .header {
+    display: grid;
+    min-height: 768px;
+    gap: 130px;
+  }
+.header__theme-menu { 
+  width: 236px;
+  height: 26px;
+  justify-self: center;
+  margin-block-start: 0px;
+}
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.header-text {
+  height: 71px;
+}
+.focus {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+.concentration,
+.concentration-title {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.section {
+  display: grid;
+  grid-template-rows: 23px;
+}
+.five-advices {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
 }
