--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,12 +3,63 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-:root.page.theme_dark {
+:root .theme_dark {
   --accent-color: #ff0070;
 }
+
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-image: url(../images/cover-image-dark.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+.theme_dark .decorated-zone::before {
+  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--accent-color);
+}
+.theme_dark .decorated-zone::after {
+  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--accent-color);
+}
+.theme_dark .title-decor {
+  background-color: var(--accent-color);
+}
+.theme_dark .title {
+  color: #db00ff;
+  text-shadow: 4px 4px 0px var(--accent-color);
+}
+.theme_dark .text-link {
+  text-shadow: 2px 1px 0px var(--accent-color);
+}
+.theme_dark .text-link:hover {
+  text-decoration: underline;
+text-decoration-thickness: 1px;
+}
+.theme_dark .text-link:focus-visible {
+  border: 1px solid var(--accent-color);
+}
+.theme_dark .footer-title {
+  text-shadow: 2px 2px 0px #ff8dcb;
+}
+.theme_dark .header__theme-menu-button_type_dark {
+  border: 1px solid var(--accent-color);
+}
+.theme_dark .header__theme-menu-button_type_light:hover {
+border: 1px solid rgba(255, 0, 112, 0.4);
+}
+.theme_dark .header__theme-menu-button_type_light:focus-visible {
+  border-top: none;
+  border-right: none;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: none;
+  outline: none;
+}
+.theme_dark .header-text,
+.theme-dark .section-title {
+  color: #000028;
 }
