--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  font-family: "IBM Plex mono";
+  font-family: "IBM Plex mono", sans-serif;
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 .title-decor {
