--- a/styles/dark.css
+++ b/styles/dark.css
@@ -18,48 +18,70 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
+
 .theme_dark .decorated-zone::before {
   border-block-start: 1px solid var(--accent-color);
   border-inline-end: 1px solid var(--accent-color);
 }
+
 .theme_dark .decorated-zone::after {
   border-block-end: 1px solid var(--accent-color);
   border-inline-start: 1px solid var(--accent-color);
 }
+
 .theme_dark .title-decor {
   background-color: var(--accent-color);
 }
+
 .theme_dark .title {
   color: #db00ff;
   text-shadow: 4px 4px 0px var(--accent-color);
 }
+
 .theme_dark .text-link {
   text-shadow: 2px 1px 0px var(--accent-color);
+  text-decoration: none;
 }
+
 .theme_dark .text-link:hover {
   text-decoration: underline;
-text-decoration-thickness: 1px;
+  text-decoration-thickness: 1px;
 }
+
 .theme_dark .text-link:focus-visible {
   border: 1px solid var(--accent-color);
 }
+
 .theme_dark .footer-title {
-  text-shadow: 2px 2px 0px #ff8dcb;
+  text-shadow: 2px 2px 0px var(--accent-color);
 }
+
 .theme_dark .header__theme-menu-button_type_dark {
   border: 1px solid var(--accent-color);
 }
+
 .theme_dark .header__theme-menu-button_type_light:hover {
-border: 1px solid rgba(255, 0, 112, 0.4);
+  border: 1px solid rgba(255, 0, 112, 0.4);
 }
+
+.theme_dark .header__theme-menu-button_type_light:focus,
+.theme_dark .header__theme-menu-button_type_auto:focus,
+.theme_dark .text-link:focus {
+  outline: none;
+}
+
 .theme_dark .header__theme-menu-button_type_light:focus-visible {
   border-top: none;
   border-right: none;
   border-bottom: 1px solid var(--accent-color);
   border-left: none;
-  outline: none;
 }
+
+.theme_dark .text-link:focus-visible {
+  border: 1px solid #f1b2ce;
+}
+
 .theme_dark .header-text,
-.theme-dark .section-title {
+.theme-dark .card-title {
   color: #000028;
 }
