--- a/styles/light.css
+++ b/styles/light.css
@@ -5,92 +5,113 @@
 */
 :root.page.theme_light {
   --accent-color: #ff8dcb;
-  
 }
+
 @media (prefers-color-scheme: light) {
-.page.theme_auto {
-  /* сохраните этот селектор в приведённом виде.
+  .page.theme_auto {
+    /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  background-image: url(../images/cover-image-light.png);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-}
-.theme_auto .decorated-zone::before {
-  --accent-color: #353430;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
-}
-.theme_auto .decorated-zone::after {
-  --accent-color: #353430;
-  border-block-end: 1px solid var(--accent-color);
-  border-inline-start: 1px solid var(--accent-color);
-}
-.theme_auto .decor-sign::before,
-.theme_auto .decor-sign::after {
-  display: none;
-}
-.theme_auto .title-decor {
-  background-color: #ff8dcb;
-}
-.theme_auto .title {
-  color: #FFC2E6;
-}
-.theme_auto .header-title {
-  text-shadow: 4px 4px #ff8dcb;
-}
-.theme_auto .header__theme-menu-button,
-.theme_auto .article-title,
-.theme_auto .card-text,
-.theme_auto .text-link,
-.theme_auto .header-text,
-.theme_auto .section-title,
-.theme_auto .card-title,
-.theme_auto .section-text {
-  --accent-color:#353430;
-  color: var(--accent-color);
-}
-.theme_auto .text-link {
-  text-shadow: 2px 1px 0px #FF8DCB;
-}
-.theme_auto .text-link:hover {
-  text-decoration: underline;
-text-decoration-thickness: 1px;
-}
-.theme_auto  .text-link:focus-visible {
-  border: 1px solid #353430;
-}
-.theme_auto .footer-title {
-  text-shadow: 2px 2px 0px #ff8dcb;
-}
-.theme_auto .header__theme-menu-button_type_light {
-  border: 1px solid #353430;
-}
-.theme_auto .header__theme-menu-button_type_dark {
-border: none;
-}
-.theme_auto .header__theme-menu-button_type_dark:hover {
-border: 1px solid #32312D66;
-}
-.theme_auto .header__theme-menu-button_type_dark:focus-visible {
-  outline: none;
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  border-bottom: 1px solid #353430;
-}
-@media (width >= 769px) {
+    background-image: url(../images/cover-image-light.png);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+
+  .theme_auto .decorated-zone::before {
+    --accent-color: #353430;
+    border-block-start: 1px solid var(--accent-color);
+    border-inline-end: 1px solid var(--accent-color);
+  }
+
+  .theme_auto .decorated-zone::after {
+    --accent-color: #353430;
+    border-block-end: 1px solid var(--accent-color);
+    border-inline-start: 1px solid var(--accent-color);
+  }
+
+  .theme_auto .decor-sign::before,
+  .theme_auto .decor-sign::after {
+    display: none;
+  }
+
+  .theme_auto .title-decor {
+    background-color: #ff8dcb;
+  }
+
+  .theme_auto .title {
+    color: #ffc2e6;
+  }
+
   .theme_auto .header-title {
-    text-shadow: 4px 4px 0px #ff0070;
+    text-shadow: 4px 4px #ff8dcb;
   }
+
+  .theme_auto .header__theme-menu-button,
+  .theme_auto .card-text,
+  .theme_auto .text-link,
+  .theme_auto .header-text,
+  .theme_auto .section-title,
+  .theme_auto .card-title,
+  .theme_auto .card-subtitle {
+    --accent-color: #353430;
+    color: var(--accent-color);
+  }
+
+  .theme_auto .text-link {
+    text-shadow: 2px 1px 0px #ff8dcb;
+  }
+
+  .theme_auto .text-link:hover {
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+  }
+
+  .theme_auto .text-link:focus-visible {
+    border: 1px solid #353430;
+  }
+
   .theme_auto .footer-title {
-    text-shadow: 2px 1px 0px #ff0070;
+    text-shadow: 2px 2px 0px #ff8dcb;
+  }
+
+  .theme_auto .header__theme-menu-button_type_light {
+    border: 1px solid #353430;
+  }
+
+  .theme_auto .header__theme-menu-button_type_dark {
+    border: none;
+  }
+
+  .theme_auto .header__theme-menu-button_type_dark:hover {
+    border: 1px solid #32312d66;
+  }
+
+  .theme_auto .header__theme-menu-button_type_dark:focus,
+  .theme_auto .text-link:focus {
+    outline: none;
+  }
+  
+  .theme_auto .header__theme-menu-button_type_dark:focus-visible {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 1px solid #353430;
+  }
+
+  @media (width >= 769px) {
+    .theme_auto .header-title {
+      text-shadow: 4px 4px 0px #ff0070;
+    }
+
+    .theme_auto .footer-title {
+      text-shadow: 2px 1px 0px #ff0070;
+    }
   }
 }
-}
+
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
@@ -102,29 +123,36 @@ border: 1px solid #32312D66;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
+
 .theme_light .decorated-zone::before {
   --accent-color: #353430;
   border-block-start: 1px solid var(--accent-color);
   border-inline-end: 1px solid var(--accent-color);
 }
+
 .theme_light .decorated-zone::after {
   --accent-color: #353430;
   border-block-end: 1px solid var(--accent-color);
   border-inline-start: 1px solid var(--accent-color);
 }
+
 .theme_light .decor-sign::before,
 .theme_light .decor-sign::after {
   display: none;
 }
+
 .theme_light .title-decor {
   background-color: #ff8dcb;
 }
+
 .theme_light .title {
-  color: #FFC2E6;
+  color: #ffc2e6;
 }
+
 .theme_light .header-title {
   text-shadow: 4px 4px #ff8dcb;
 }
+
 .theme_light .header__theme-menu-button,
 .theme_light .article-title,
 .theme_light .card-text,
@@ -133,31 +161,41 @@ border: 1px solid #32312D66;
 .theme_light .section-title,
 .theme_light .card-title,
 .theme_light .section-text {
-  --accent-color:#353430;
+  --accent-color: #353430;
   color: var(--accent-color);
 }
+
 .theme_light .text-link {
-  text-shadow: 2px 1px 0px #FF8DCB;
+  text-shadow: 2px 1px 0px #ff8dcb;
+  text-decoration: none;
 }
+
 .theme_light .text-link:hover {
   text-decoration: underline;
-text-decoration-thickness: 1px;
+  text-decoration-thickness: 1px;
 }
-.theme_light  .text-link:focus-visible {
+
+.theme_light .text-link:focus-visible {
   border: 1px solid #353430;
 }
+
 .theme_light .footer-title {
   text-shadow: 2px 2px 0px #ff8dcb;
 }
+
 .theme_light .header__theme-menu-button_type_light {
   border: 1px solid #353430;
 }
+
 .theme_light .header__theme-menu-button_type_dark {
-border: none;
+  border: none;
 }
-.theme_light .header__theme-menu-button_type_dark:hover {
-border: 1px solid #32312D66;
+
+.theme_light .header__theme-menu-button_type_dark:hover,
+.theme_light .header__theme-menu-button_type_auto:hover {
+  border: 1px solid #32312d66;
 }
+
 .theme_light .header__theme-menu-button_type_dark:focus-visible {
   outline: none;
   border-top: none;
@@ -165,10 +203,12 @@ border: 1px solid #32312D66;
   border-left: none;
   border-bottom: 1px solid #353430;
 }
+
 @media (width >= 769px) {
   .theme_light .header-title {
     text-shadow: 4px 4px 0px #ff0070;
   }
+
   .theme_light .footer-title {
     text-shadow: 2px 1px 0px #ff0070;
   }
