--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,14 @@
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: "IBM Plex mono", monospace;
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
+
 .title-decor {
   background-color: var(--accent-color);
 }
+
 .header {
   display: grid;
   grid-template-rows: 1fr auto 1fr;
@@ -19,18 +21,21 @@
   gap: 55px;
   min-height: 668px;
   padding: 10px;
-  max-height: 100vh;
+  height: 100vh;
 }
+
 .title {
   color: #db00ff;
   font-weight: 700;
   line-height: 95.7px;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
+
 .header-title {
   justify-self: start;
   text-shadow: 4px 4px 0px var(--accent-color);
 }
+
 .decorated-zone::before {
   content: "";
   width: 25px;
@@ -41,6 +46,7 @@
   right: 10px;
   position: absolute;
 }
+
 .decorated-zone::after {
   content: "";
   width: 25px;
@@ -51,6 +57,7 @@
   left: 10px;
   position: absolute;
 }
+
 .decor-sign::before {
   content: "REC";
   position: absolute;
@@ -59,6 +66,7 @@
   top: 10px;
   right: 38px;
 }
+
 .decor-sign::after {
   content: "";
   position: absolute;
@@ -70,18 +78,20 @@
   top: 18px;
   right: 19px;
 }
+
 .header__theme-menu {
   width: 70px;
-  height: 104px;
   justify-self: end;
   margin-block-start: 66.5px;
 }
+
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   gap: 13px;
 }
+
 .header__theme-menu-button {
   background-color: transparent;
   border: none;
@@ -95,90 +105,123 @@
   display: flex;
   justify-content: center;
   align-content: center;
+  cursor: pointer;
 }
+
 .header__theme-menu-button_type_dark {
   border: solid 1px var(--accent-color);
 }
-.header__theme-menu-button_type_light:hover {
+
+.header__theme-menu-button_type_light:hover,
+.header__theme-menu-button_type_auto:hover {
   border: 1px solid rgba(255, 0, 112, 0.4);
 }
-.header__theme-menu-button_type_light:focus-visible {
+
+.header__theme-menu-button_type_light:focus,
+.header__theme-menu-button_type_auto:focus,
+.text-link:focus {
+  outline: none;
+}
+
+.header__theme-menu-button_type_light:focus-visible,
+.header__theme-menu-button_type_auto:focus-visible {
   border-top: none;
   border-right: none;
   border-bottom: 1px solid var(--accent-color);
   border-left: none;
-  outline: none;
 }
+
 .header__theme-menu-button_active {
   pointer-events: none;
 }
+
 .header-text,
 .section-title,
 .card-subtitle {
   color: #000028;
 }
+
 .header-text {
   line-height: 23.4px;
   font-weight: 700;
   justify-self: end;
-  max-height: 117px;
+  margin-block-end: 46px;
 }
+
 .decor-sign {
   position: absolute;
   inset: 0;
   z-index: -1;
 }
-.card-list {
+
+.main-content {
   display: grid;
   gap: 50px;
   padding: 0 10px 0;
   margin-block-start: 40px;
 }
-.card-list__item {
+
+.section-title,
+.card-title,
+.card-text,
+.card-subtitle {
+  line-height: 23.4px;
+}
+
+.card-list {
   display: grid;
   gap: 20px;
 }
+
 .card {
-  display: grid;
-  gap: 20px;
-}
-.section {
   display: grid;
   gap: 10px;
 }
-.section-title {
-  height: 24px;
+
+.section {
+  display: grid;
+  gap: 20px;
 }
-.card-title {
+
+.section-title {
   color: var(--accent-color);
 }
+
 .advise {
   font-weight: 400;
 }
-.section-text {
+
+.card-text {
   color: #f1b2ce;
   line-height: 23.4px;
 }
+
 .text-link {
-  text-shadow: 2px 1px 0px var(--accent-color);
+  text-shadow: 2px 1px 0px #ff0070;
   text-decoration: none;
 }
+
 .text-link:hover {
   text-decoration: underline;
   text-decoration-thickness: 1px;
 }
+
 .text-link:focus-visible {
   border: 1px solid #f1b2ce;
-  outline: none;
 }
+
 .img-card {
   display: grid;
   gap: 10px;
 }
+
 .card-image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
+
 .footer {
   margin-block-start: 40px;
   display: grid;
@@ -186,87 +229,103 @@
   justify-content: center;
   position: relative;
   padding: 10px;
-  min-height: 667px;
+  min-height: 668px;
+  height: 100vh;
 }
+
 .footer-title {
   text-shadow: 2px 2px 0px var(--accent-color);
   margin-block-end: 10px;
 }
 
 /* Для планшета и десктопа */
-@media (width >= 376px) {
+@media (width >= 768px) {
   .header {
     padding: 20px;
   }
+
   .header::before {
     top: 20px;
     right: 20px;
   }
+
   .header::after {
     left: 20px;
     bottom: 20px;
   }
+
   .decor-sign::before {
     top: 20px;
     right: 48px;
   }
+
   .decor-sign::after {
     top: 28px;
     right: 29px;
   }
+
   .title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
+
   .header-title {
     margin-inline-start: -20px;
   }
+
   .header-text {
-    width: calc(50vw - 20px);
+    max-width: calc(50vw - 20px);
+    width: 100%;
   }
-  .card-list {
+
+  .main-content {
     padding: 0 20px 0;
     display: grid;
     gap: 80px;
     margin-block-start: 60px;
   }
+
   .card {
     display: grid;
-    gap: 20px;
+    gap: 10px;
   }
-  .section-title {
-    height: 23px;
-  }
+
   .img-card {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
+
   .img-card-title {
     grid-column: 1/4;
   }
+
   .sunset-img {
     grid-column: 1/3;
     grid-row: 2/2;
   }
+
   .ice-cream-img {
     grid-row: 2/4;
-    object-fit: cover;
   }
+
   .tape-img {
     grid-row: 3/5;
-    object-fit: cover;
   }
+
   .street-img {
     grid-column: 2/4;
   }
+
   .footer {
     padding: 20px;
     margin-block-start: 60px;
   }
+
   .footer::before {
     top: 20px;
     right: 20px;
   }
+
   .footer::after {
     bottom: 20px;
     left: 20px;
@@ -274,28 +333,45 @@
 }
 
 /* Для планшета */
-@media (768px >= width >= 376px) {
+@media (1023px >= width >= 768px) {
   .header {
     display: grid;
     gap: 165px;
     min-height: 1024px;
   }
+
   .header__theme-menu {
     margin-block-start: 173px;
-
   }
+
+  .header-text {
+    margin-block-end: 163px;
+  }
+
   .focus {
     display: grid;
     grid-template-columns: 1fr 2fr;
   }
+
   .concentration-title {
     display: grid;
     grid-template-columns: 1fr 3fr;
   }
+
   .five-advices {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    grid-template-rows: 23px;
   }
+
+  .section-subtitle {
+    grid-column: 2/2;
+  }
+
+  .advice-card-list {
+    grid-column: 2/3;
+  }
+
   .footer {
     min-height: 1024px;
   }
@@ -307,40 +383,49 @@
     min-height: 768px;
     gap: 130px;
   }
+
   .header__theme-menu {
     width: 236px;
-    height: 26px;
     justify-self: center;
     margin-block-start: 0px;
   }
+
   .header__theme-menu-list {
     display: flex;
     flex-direction: row;
     justify-content: center;
   }
+
   .header-text {
-    height: 71px;
+    margin-block-end: 114px;
   }
+
   .focus {
     display: grid;
     grid-template-columns: 1fr 2fr;
   }
+
   .concentration,
   .concentration-title {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
-  .section {
-    display: grid;
-    grid-template-rows: 23px;
-  }
+
   .five-advices {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    grid-template-rows: 23px;
   }
+
+  .section-subtitle {
+    grid-column: 2/2;
+  }
+
+  .advice-card-list {
+    grid-column: 2/3;
+  }
+
   .footer {
     min-height: 768px;
   }
 }
-
- 
