--- a/styles/style.css
+++ b/styles/style.css
@@ -19,9 +19,9 @@
   grid-template-rows: 1fr auto 1fr;
   position: relative;
   gap: 55px;
-  min-height: 668px;
   padding: 10px;
-  height: 100vh;
+  min-height: 100vh;
+  justify-items: end;
 }
 
 .title {
@@ -228,8 +228,7 @@
   justify-content: center;
   position: relative;
   padding: 10px;
-  min-height: 668px;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .footer-title {
@@ -336,8 +335,6 @@
   .header {
     display: grid;
     gap: 165px;
-    min-height: 1024px;
-    height: 100vh;
   }
 
   .header__theme-menu {
@@ -371,18 +368,11 @@
   .advice-card-list {
     grid-column: 2/3;
   }
-
-  .footer {
-    min-height: 1024px;
-    height: 100vh;
-  }
 }
 /* Для десктопа */
 @media (width >= 1024px) {
   .header {
     display: grid;
-    min-height: 768px;
-    height: 100vh;
     gap: 130px;
   }
 
@@ -425,10 +415,5 @@
 
   .advice-card-list {
     grid-column: 2/3;
-  }
-
-  .footer {
-    min-height: 768px;
-    height: 100vh;
   }
 }
